@@ -16,6 +16,7 @@
  - Fixed close-tab-0 crash.
  - Fixed /unload <plugin_file_name> crash.
  - Fixed userlist popup menu disappearing on button-release.
+ - Added hack to make plugins possible on win32.
  - 
  - 
 
